--- a/app/index_old.html
+++ b/app/index_old.html
@@ -19,7 +19,7 @@
 
     <script src="assets/vendor.js"></script>
     <script src="assets/super-rentals.js"></script>
-
+    Index.html page is here
     {{content-for 'body-footer'}}
   </body>
 </html>
