--- a/app/index.html
+++ b/app/index.html
@@ -19,7 +19,7 @@
 
     <script src="assets/vendor.js"></script>
     <script src="assets/super-rentals.js"></script>
-    Index.html page is here
+    Index.html page is here.  I wish I could see the content I stored on index.hbs...
     {{content-for 'body-footer'}}
   </body>
 </html>
